# NonlinearSolver

Verified-Nonlinear-Equation/: CMakeLists.txt  README.md
Verified-Nonlinear-Equation/src/: NonlinearSolver.cpp  main.cpp
