cmake_minimum_required(VERSION 2.8)
project(Verified-Nonlinear-Equation)
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
include_directories(${PROJECT_SOURCE_DIR}/include)
aux_source_directory(./src srcfiles)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
add_executable(Verified-Nonlinear-Equation ${srcfiles})
target_link_libraries(Verified-Nonlinear-Equation)
